# prism_qt_modular

./: .gitignore  CMakeLists.txt  README.md  usage  vcpkg.json
cmake/: portfile.cmake  prism_qt_modularConfig.cmake.in  vcpkg.json.in
include/prism/qt/modular/: dynamic_lib_caller.h  prism_qt_modular_global.h  shm_helper.h  wrapper.h
include/prism/qt/modular/interfaces/: intf_module.h
src/: dynamic_lib_caller.cpp  shm_helper.cpp  wrapper.cpp
